Change color of distance line and fix marker z-index

--- a/css/main.css
+++ b/css/main.css
@@ -175,11 +175,17 @@ body {
 .map-game-wrapper .map-content .marker-guess {
     margin-top: -45px;
     margin-left: -7px;
+    z-index: 2;
 }
 
 .map-game-wrapper .map-content .marker-answer {
     margin-top: -45px;
     margin-left: -7px;
+    z-index: 2;
+}
+
+.map-game-wrapper .map-content .line {
+    z-index: 1;
 }
 
 .map-game-wrapper .map-content .coords {
